fix double border

--- a/public/less/post/Post.less
+++ b/public/less/post/Post.less
@@ -34,6 +34,7 @@
 	.panel-body {
 		padding: 0px;
 		border-top: 1px solid #c6c6c6;
+		border-bottom: 1px solid #c6c6c6;
 
 		.panel-body-text {
 			box-shadow: none;
@@ -64,7 +65,7 @@
 		width: 93%;
 		margin-left: auto;
 		margin-right: auto;
-		border-top: 1px solid #c6c6c6;
+
 		.comment-count {
 			font-size: 1.1em;
 			padding-top: 10px;
